--- a/assets/index.html
+++ b/assets/index.html
@@ -13,35 +13,35 @@
     <div class="container">
         <form name="form">
             <div class="display">
-                <input type="text" placeholder="0" name="displayResult" />
+                <input type="text" placeholder="0" name="displayResult"  id="result"/>
             </div>
             <div class="buttons">
                 <div class="row">
-                    <input type="button" name="b7" value="7">
-                    <input type="button" name="b8" value="8" >
-                    <input type="button" name="b9" value="9" >
-                    <input type="button" name="addb" value="+" >
+                    <input type="button" name="b7" value="7" onClick="calcNumbers(b7.value)">
+                    <input type="button" name="b8" value="8" onClick="calcNumbers(b8.value)">
+                    <input type="button" name="b9" value="9" onClick="calcNumbers(b9.value)" >
+                    <input type="button" name="addb" value="+" onClick="calcNumbers(addb.value)" id="operator" >
                 </div>
 
                 <div class="row">
-                    <input type="button" name="b4" value="4" >
+                    <input type="button" name="b4" value="4" onClick="calcNumbers(b4.value)">
                     <input type="button" name="b5" value="5" onClick="calcNumbers(b5.value)">
                     <input type="button" name="b6" value="6" onClick="calcNumbers(b6.value)">
-                    <input type="button" name="subb" value="-" onClick="calcNumbers(subb.value)">
+                    <input type="button" name="subb" value="-" onClick="calcNumbers(subb.value)" id="operator">
                 </div>
 
                 <div class="row">
                     <input type="button" name="b1" value="1" onClick="calcNumbers(b1.value)">
                     <input type="button" name="b2" value="2" onClick="calcNumbers(b2.value)">
-                    <input type="button" name="b3" value="3" onClick="calcNumbers(b3.value)">
-                    <input type="button" name="mulb" value="*" onClick="calcNumbers(mulb.value)">
+                    <input type="button" name="b3" value="3" onClick="calcNumbers(b3.value)" >
+                    <input type="button" name="mulb" value="*" onClick="calcNumbers(mulb.value)" id="operator">
                 </div>
 
                 <div class="row">
                     <input type="button" name="b0" value="0" onClick="calcNumbers(b0.value)">
-                    <input type="button" name="potb" value="." onClick="calcNumbers(potb.value)">
-                    <input type="button" name="divb" value="/" onClick="calcNumbers(divb.value)">
-                    <input type="button" class="red" value="=" onClick="displayResult.value=eval(displayResult.value)">
+                    <input type="button" name="potb" value="." onClick="calcNumbers(potb.value)" id="dot">
+                    <input type="button" name="divb" value="/" onClick="calcNumbers(divb.value)" id="operator">
+                    <input type="button" class="red" value="=" onClick="displayResult.value=eval(displayResult.value)" id="equal_sign">
                 </div>
             </div>
 
